# vector

./: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: SectionPanel.tsx  Sidebar.tsx
apps/desktop/src/components/home/: Home.test.tsx  Home.tsx  NeedsYouRow.test.tsx  NeedsYouRow.tsx
apps/desktop/src/components/shell/: AppShell.tsx  Brand.tsx  ThemeToggle.tsx  TopBar.tsx  shell.test.tsx
apps/desktop/src/components/ui/: ArrowRight.tsx  Band.tsx  Eyebrow.tsx  IconButton.tsx  ui.test.tsx
apps/desktop/src/lib/: home.test.ts  home.ts  tauri.ts  tones.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/theme/: ThemeProvider.test.tsx  ThemeProvider.tsx
crates/vector-core/: Cargo.toml
crates/vector-core/src/: agent.rs  app.rs  config.rs  lib.rs  orchestrator.rs  scoring.rs  vault.rs  workspace.rs
crates/vector-db/: Cargo.toml
crates/vector-db/migrations/: 001_init.sql
crates/vector-db/src/: lib.rs  pool.rs
crates/vector-types/: Cargo.toml
crates/vector-types/src/: app.rs  lib.rs  opportunity.rs  workspace.rs
docs/: architecture.md
docs/design/: design-system.md  ui-ux-direction.md
docs/design/mockups/: vector-home.html
schemas/evidence/: v1.json
schemas/rubric/: v1.json
