[workspace]
resolver = "2"
members = [
    "crates/vector-types",
    "crates/vector-db",
    "crates/vector-core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noodlemind/vector"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "uuid",
    "chrono",
] }
vector-types = { path = "crates/vector-types" }
vector-db = { path = "crates/vector-db" }
vector-core = { path = "crates/vector-core" }

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
strip = true
