[package]
name = "vector-core"
description = "Authoritative Rust core for Vector — state, orchestration, and domain logic"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
directories = "6"
vector-db = { workspace = true }
vector-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
