[package]
name = "vector-types"
description = "Shared domain types and IPC boundary types for Vector"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
