[package]
name = "vector-desktop"
description = "Vector desktop shell — thin Tauri wrapper over vector-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "vector_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vector-core = { workspace = true }
vector-types = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
